--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "npm run lint & nodemon server/server.js",
         "lint": "./node_modules/.bin/eslint **/*.js"
     },
     "author": "Pavan Aditya M S",
     "license": "MIT",
     "dependencies": {
-        "eslint": "^6.8.0",
-        "express": "^4.17.1"
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "joi": "^17.2.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.10.0",
+        "mongoose-unique-validator": "^2.0.3",
+        "passport": "^0.4.1",
+        "passport-google-oauth": "^2.0.0",
+        "request": "^2.88.2"
+    },
+    "devDependencies": {
+        "eslint": "^7.7.0",
+        "nodemon": "^2.0.4"
     }
 }
